 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
  
     
     <RelativeLayout 
	    style="@style/container"
  	    tools:context="com.jfakey.swellingup.HelpButt" >

         <TextView
             android:id="@+id/textView1"
             style="@style/header"
             android:text="@string/helpHead" />

         <TextView
             android:id="@+id/textView2"
             style="@style/medium"
             android:layout_below="@+id/textView1"
             android:text="@string/helpSubHead" />

         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView2"
             android:text="@string/helpAbout"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView4"
             style="@style/medium"
             android:layout_below="@+id/textView3"
             android:text="@string/helpDSHead" />

         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView4"
             android:text="@string/helpDS"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView6"
             style="@style/medium"
             android:layout_below="@+id/textView5"
             android:text="@string/helpGSHead" />

         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView6"
             android:text="@string/helpGS"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView8"
             style="@style/medium"
             android:layout_below="@+id/textView7"
             android:text="@string/helpTSHead" />

         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView8"
             android:text="@string/helpTS"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView10"
             style="@style/medium"
             android:layout_below="@+id/textView9"
             android:text="@string/helpFSHead" />

         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView10"
             android:text="@string/helpFS"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView12"
             style="@style/medium"
             android:layout_below="@+id/textView11"
             android:text="@string/helpPSHead" />

         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView12"
             android:text="@string/helpPS"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
             android:id="@+id/textView14"
             style="@style/medium"
             android:layout_below="@+id/textView13"
             android:text="@string/helpNSHead" />

         <TextView
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView14"
             android:text="@string/helpNS"
             android:textAppearance="?android:attr/textAppearanceSmall" />
	
	</RelativeLayout>

</ScrollView>
