 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >





<RelativeLayout
    style="@style/container"
    tools:context="com.jfakey.swellingup.WeekSix" >



    <TextView
        android:id="@+id/w1Head"
        style="@style/header"
        android:text="@string/w6Head" />

    <Button
        android:id="@+id/button1"
        style="@style/button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/w1Head"
        android:layout_marginTop="24dp"
        android:text="@string/d36"
        android:onClick="day36Open" />

    <Button
        android:id="@+id/button2"
        style="@style/button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="60dp"
        android:text="@string/d37"
        android:onClick="day37Open" />

    <Button
        android:id="@+id/button3"
        style="@style/button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="60dp"
        android:text="@string/d38"
        android:onClick="day38Open" />

    <Button
        android:id="@+id/button4"
        style="@style/button"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button1"
        android:text="@string/d39" 
        android:onClick="day39Open"/>

    <Button
        android:id="@+id/button5"
        style="@style/button"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="@string/d40"
        android:onClick="day40Open" />

    <Button
        android:id="@+id/button6"
        style="@style/button"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentRight="true"
        android:text="@string/d41"
        android:onClick="day41Open" />

    <Button
        android:id="@+id/button7"
        style="@style/button"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/d42"
        android:onClick="day42Open" />

</RelativeLayout>
</ScrollView>