<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
        
<RelativeLayout 
    style="@style/container"
    tools:context="com.jfakey.swellingup.OpenData" >

    <TextView
        android:id="@+id/textView1"
        style="@style/header"
        android:text="@string/recordHead" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/warning"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button2"
        style="@style/button"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:onClick="runLoad"
        android:text="@string/load" />

    <Button
        android:id="@+id/button3"
        style="@style/button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:onClick="runDelete"
        android:text="@string/delete" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
</ScrollView>